Urls connected & Frontend Changes

--- a/authenticate/templates/authenticate/SignUp1.html
+++ b/authenticate/templates/authenticate/SignUp1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Hostel Management System</title>
+  <title>Sign Up - Inventory Management System</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -22,7 +22,7 @@
     <nav class="navbar fixed-top" id="topnav">
          <div></div>
           <div class="justify-content-center">
-            <span style="color:darkorange; font-family: 'Lobster', cursive;" id="title">Hostel Management System</span>
+            <span style="color:darkorange; font-family: 'Lobster', cursive;" id="title">Inventory Management System</span>
           </div>
           <div>
           </div>
@@ -78,7 +78,7 @@
                                    
                               </div>
                               <div class="row justify-content-center">
-                                   <a href="{% url 'institute:index' %}"><button class="btn float-right sign_btn">Cancel</button></a>
+                                   <a href="{% url 'authenticate:login' %}"><button class="btn sign_btn">Login</button></a>
                               </div>
                               
                     </div>
