--- a/authenticate/templates/authenticate/forgot.html
+++ b/authenticate/templates/authenticate/forgot.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Login - Hostel Management System</title>
+  <title>Forgot Password - Inventory Management System</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
     <nav class="navbar fixed-top" id="topnav">
        <span></span>
         <div class="justify-content-center">
-            <span style="color:darkorange; font-family: 'Lobster', cursive;" id="title">Hostel Management System</span>
+            <span style="color:darkorange; font-family: 'Lobster', cursive;" id="title">Inventory Management System</span>
         </div>
 
         <div>
