--- a/institute/templates/institute/incharge-home.html
+++ b/institute/templates/institute/incharge-home.html
@@ -42,15 +42,33 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="examples/icons.html">
+              <a class="nav-link" href="{% url 'institute:unmet_require' %}">
                 <i class="ni ni-planet text-orange"></i>
-                <span class="nav-link-text">Maintenance</span>
+                <span class="nav-link-text">Unmet Requirements</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="examples/map.html">
-                <i class="ni ni-pin-3 text-primary"></i>
+              <a class="nav-link" href="{% url 'institute:maintainence' %}">
+                <i class="ni ni-settings text-info"></i>
+                <span class="nav-link-text">Maintenance Products</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="{% url 'institute:unusable' %}">
+                <i class="ni ni-fat-remove text-orange"></i>
+                <span class="nav-link-text">Unusable Products</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'institute:products' %}">
+                <i class="fas fa-list text-primary"></i>
                 <span class="nav-link-text">Products</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'institute:stock' %}">
+                <i class="fas fa-warehouse text-green"></i>
+                <span class="nav-link-text">Stock Products</span>
               </a>
             </li>
             <li class="nav-item">
@@ -63,24 +81,6 @@
               <a class="nav-link" href="examples/tables.html">
                 <i class="ni ni-bullet-list-67 text-default"></i>
                 <span class="nav-link-text">Tables</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="examples/login.html">
-                <i class="ni ni-key-25 text-info"></i>
-                <span class="nav-link-text">Login</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="examples/register.html">
-                <i class="ni ni-circle-08 text-pink"></i>
-                <span class="nav-link-text">Register</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="examples/upgrade.html">
-                <i class="ni ni-send text-dark"></i>
-                <span class="nav-link-text">Upgrade</span>
               </a>
             </li>
           </ul>
@@ -130,12 +130,12 @@
                 <div class="dropdown-header noti-title">
                   <h6 class="text-overflow m-0">Welcome!</h6>
                 </div>
-                <a href="#!" class="dropdown-item">
+                <a href="{% url 'institute:profile' %}" class="dropdown-item">
                   <i class="ni ni-single-02"></i>
                   <span>My profile</span>
                 </a>
                 <div class="dropdown-divider"></div>
-                <a href="#!" class="dropdown-item">
+                <a href="{% url 'authenticate:login' %}" class="dropdown-item">
                   <i class="ni ni-user-run"></i>
                   <span>Logout</span>
                 </a>
@@ -159,12 +159,12 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Required Items</h5>
-                      <span class="h1 font-weight-bold mb-0">250</span>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Rooms</h5>
+                      <span class="h1 font-weight-bold mb-0">{{room_count}}</span>
                     </div>
                     <div class="col-auto">
-                      <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
-                        <i class="ni ni-active-40"></i>
+                      <div class="icon icon-shape bg-gradient-info text-white rounded-circle shadow">
+                        <i class="fas fa-door-open"></i>
                       </div>
                     </div>
                   </div>
@@ -178,30 +178,12 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">In Use</h5>
-                      <span class="h1 font-weight-bold mb-0">230</span>
-                    </div>
-                    <div class="col-auto">
-                      <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
-                        <i class="ni ni-chart-pie-35"></i>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-md-6">
-              <div class="card card-stats h-75">
-                <!-- Card body -->
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
-                      <span class="h2 font-weight-bold mb-0">924</span>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Products In Use</h5>
+                      <span class="h1 font-weight-bold mb-0">{{products_use}}</span>
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
-                        <i class="ni ni-money-coins"></i>
+                        <i class="fas fa-thumbs-up"></i>
                       </div>
                     </div>
                   </div>
@@ -214,15 +196,34 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                      <span class="h2 font-weight-bold mb-0">49,65%</span>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Under Maintenance</h5>
+                      <span class="h1 font-weight-bold mb-0">{{products_main}}</span>
                     </div>
                     <div class="col-auto">
-                      <div class="icon icon-shape bg-gradient-info text-white rounded-circle shadow">
-                        <i class="ni ni-chart-bar-32"></i>
+                      <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
+                        <i class="ni ni-settings"></i>
                       </div>
                     </div>
                   </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+              <div class="card card-stats h-75">
+                <!-- Card body -->
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">
+                      <h5 class="card-title text-uppercase text-muted mb-0">Unusable Products</h5>
+                      <span class="h1 font-weight-bold mb-0">{{products_unus}}</span>
+                    </div>
+                    <div class="col-auto">
+                      <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
+                        <i class="fas fa-times-circle"></i>
+                      </div>
+                    </div>
+                  </div>
+
                 </div>
               </div>
             </div>
